apps/media/the-intersect/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name media-stack
  labels:
    app: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: *name
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: *name
        k8s.lfp.rocks/service: "media-stack"
    spec:
      securityContext:
        fsGroup: 1001
        sysctls:
          - name: net.ipv6.conf.all.disable_ipv6
            value: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k8s.lfp.rocks/gpu
                    operator: NotIn
                    values:
                      - enabled
      containers:
        - name: deluge
          image: linuxserver/deluge:2.2.0
          volumeMounts:
            - name: deluge-data
              mountPath: /data
            - name: deluge-config
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: 8112
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8112
            initialDelaySeconds: 120
            periodSeconds: 10
          resources:
            limits:
              memory: "2Gi"
            requests:
              cpu: "50m"
              memory: "256Mi"
        - name: jackett
          image: binhex/arch-jackett:0.24.2277-1-01
          volumeMounts:
            - name: jackett-data
              mountPath: /data
            - name: jackett-config
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            limits:
              memory: "1Gi"
            requests:
              cpu: "20m"
              memory: "128Mi"
        - name: sonarr
          image: binhex/arch-sonarr:4.0.19.2979-1-01
          volumeMounts:
            - name: sonarr-media
              mountPath: /media
            - name: deluge-data
              mountPath: /data
            - name: sonarr-config
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            limits:
              memory: "1Gi"
            requests:
              cpu: "20m"
              memory: "128Mi"
        - name: radarr
          image: binhex/arch-radarr:6.3.0.10514-1-01
          volumeMounts:
            - name: radarr-media
              mountPath: /media
            - name: deluge-data
              mountPath: /data
            - name: radarr-config
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            limits:
              memory: "1Gi"
            requests:
              cpu: "20m"
              memory: "128Mi"
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.0
          livenessProbe:
            tcpSocket:
              port: 8191
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8191
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            limits:
              memory: "1Gi"
            requests:
              cpu: "20m"
              memory: "128Mi"
      volumes:
        - name: gluetun-data
          emptyDir: {}
        - name: deluge-data
          persistentVolumeClaim:
            claimName: arch-delugevpn-data-pvc
        - name: deluge-config
          persistentVolumeClaim:
            claimName: arch-delugevpn-config-pvc
        - name: jackett-data
          persistentVolumeClaim:
            claimName: arch-jackett-data-pvc
        - name: jackett-config
          persistentVolumeClaim:
            claimName: arch-jackett-config-pvc
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: arch-sonarr-config-pvc
        - name: sonarr-media
          persistentVolumeClaim:
            claimName: arch-sonarr-media-pvc
        - name: radarr-config
          persistentVolumeClaim:
            claimName: arch-radarr-config-pvc
        - name: radarr-media
          persistentVolumeClaim:
            claimName: arch-radarr-media-pvc
